package com.datmedia.mediaplayer.androidrequestresponse;
message PublicKey{
required bytes Exponent = 1;
required bytes Modules = 2;
}